--- a/lab_python/python2_variable.ipynb
+++ b/lab_python/python2_variable.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPAnFFFoRvisSGxftLQA1ey",
+      "authorship_tag": "ABX9TyO/ChG57+CU8g2DseDOiKl5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,6 +137,194 @@
           "text": [
             "<class 'str'>\n",
             "name = 오쌤\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 논리 타입"
+      ],
+      "metadata": {
+        "id": "laSWNeeVuHCj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = False  # True(참) / False(거짓)\n",
+        "print(type(b))  # boolean\n",
+        "print('b =', b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uAlU_rYvuM0I",
+        "outputId": "b816b120-6eeb-4e5d-81cb-f99003f0dea8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'bool'>\n",
+            "b = False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 5 < 1\n",
+        "print(type(b))\n",
+        "print('b =', b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vduRJWHxu1mV",
+        "outputId": "be3b2bcb-c012-4b14-cd1e-8b18845a0a2e"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'bool'>\n",
+            "b = False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 명시적 타입 변환\n",
+        "\n",
+        "*   `int(arg)`: 아규먼트(arg)로 전달된 값을 정수로 변환해서 반환하는 함수.\n",
+        "    *   문자열 -> 정수\n",
+        "    *   실수 -> 정수\n",
+        "*   `float(arg)`: 아규먼트로 전달된 값을 실수로 변환해서 반환하는 함수.\n",
+        "    *   문자열 -> 실수\n",
+        "    *   정수 -> 실수\n",
+        "*   `str(arg)`: 아규먼트로 전달된 값을 문자열로 변환해서 반환하는 함수.\n",
+        "    *   정수, 실수, ... -> 문자열\n"
+      ],
+      "metadata": {
+        "id": "Mvvb_KxvvvM1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input('정수 입력>>> ')\n",
+        "y = input('정수 입력>>> ')\n",
+        "\n",
+        "print('변수 x의 타입 =', type(x))\n",
+        "print('변수 y의 타입 =', type(y))\n",
+        "\n",
+        "x = int(x)  # 변수 x의 값을 int 타입으로 변환해서 변수 x에 저장(할당)\n",
+        "y = int(y)  # 변수 y의 값을 int 타입으로 변환해서 변수 y에 저장(할당)\n",
+        "print('변수 x의 타입 =', type(x))\n",
+        "print('변수 y의 타입 =', type(y))\n",
+        "\n",
+        "print(f'{x} - {y} = {x - y}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uiHg18L1w_0N",
+        "outputId": "7335b55f-0d27-49b8-bca9-f2fe51894669"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "정수 입력>>> 1234\n",
+            "정수 입력>>> 345\n",
+            "변수 x의 타입 = <class 'str'>\n",
+            "변수 y의 타입 = <class 'str'>\n",
+            "변수 x의 타입 = <class 'int'>\n",
+            "변수 y의 타입 = <class 'int'>\n",
+            "1234 - 345 = 889\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 연산자(Operator)"
+      ],
+      "metadata": {
+        "id": "fQpEva9W00Hf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 할당(assignment) 연산자\n",
+        "\n",
+        "*   `=`: 연산자 오른쪽의 값을 연산자 왼쪽의 변수에 저장(할당)"
+      ],
+      "metadata": {
+        "id": "r1we1Sin05n3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 산술(arithmetic) 연산자\n",
+        "\n",
+        "*   종류: `+, -, *, /, **, //, %`\n",
+        "*   산술 연산자는 일반적으로 숫자 타입(int, float)에서만 사용 가능.\n",
+        "*   일부 산술 연산자는 문자열과 같은 숫자 이외의 타입에서도 사용 가능.\n"
+      ],
+      "metadata": {
+        "id": "lzJUp1Da1ZxP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x, y = 10, 3\n",
+        "print(f'{x} + {y} = {x + y}')\n",
+        "print(f'{x} - {y} = {x - y}')\n",
+        "print(f'{x} x {y} = {x * y}')\n",
+        "print(f'{x} / {y} = {x / y}')\n",
+        "print(f'{x}의 {y} 거듭제곱 = {x ** y}')\n",
+        "print(f'{x}를 {y}로 나눈 몫 = {x // y}')\n",
+        "print(f'{x}를 {y}로 나눈 나머지 = {x % y}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l-I6mF-T2IDo",
+        "outputId": "b0067cfb-f409-42b1-9973-f6d8a5025b10"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 + 3 = 13\n",
+            "10 - 3 = 7\n",
+            "10 x 3 = 30\n",
+            "10 / 3 = 3.3333333333333335\n",
+            "10의 3 거듭제곱 = 1000\n",
+            "10를 3로 나눈 몫 = 3\n",
+            "10를 3로 나눈 나머지 = 1\n"
           ]
         }
       ]
