--- a/lab_python/python03_conditional.ipynb
+++ b/lab_python/python03_conditional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMKbgo2XZodqTQC2AwncQqE",
+      "authorship_tag": "ABX9TyMj1jG8+5+MTSOVDULJPbpw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,22 +56,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZCt-rm4RJoGx",
-        "outputId": "382b8310-a8cf-4d2c-812b-6628a5dd93a0"
+        "outputId": "33553c45-c3f2-4de5-d3b7-56a93470e408"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "나이 입력>> 123\n",
+            "나이 입력>> 16\n",
             "안녕하세요...\n",
-            "당신은 123살이군요...\n"
+            "당신은 16살이군요...\n"
           ]
         }
       ],
@@ -112,15 +112,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sg-b6Lg4P2RO",
-        "outputId": "b85ad326-87b8-40a2-91bd-1a277467fdfe"
+        "outputId": "42ca121f-e843-43d5-f794-cf4b4b027410"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "나이 입력>> -111\n",
+            "나이 입력>> -16\n",
             "나이는 음수가 될 수 없어요.\n"
           ]
         }
@@ -149,15 +149,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "H11DUnyORcG_",
-        "outputId": "02b2df46-2a5d-4f39-eab2-1795f2f1c6df"
+        "outputId": "5921f32e-a1af-4436-d52a-5d27688ff805"
       },
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "정수 입력>> 100\n",
+            "정수 입력>> 16\n",
             "짝수\n"
           ]
         }
@@ -191,16 +191,78 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PI6ko9MzU6MQ",
-        "outputId": "a12fcb0e-1091-4744-e0de-f90f50ccb758"
+        "outputId": "f7530638-1953-41ad-be03-204413dd7935"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "정수 입력>> 12\n",
+            "정수 입력>> 16\n",
             "짝수\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## chained conditional statement\n",
+        "\n",
+        "```\n",
+        "if 조건식1:\n",
+        "    (조건식1)이 참일 때 실행할 코드 블록\n",
+        "elif 조건식2:\n",
+        "    (조건식2)가 참일 때 실행할 코드 블록\n",
+        "...\n",
+        "else:\n",
+        "    위의 모든 조건들이 거짓일 때 실행할 코드 블록\n",
+        "```\n",
+        "\n",
+        "*   `elif` 블록은 1개 이상이 있을 수 있음.\n",
+        "*   `else` 블록은 생략 가능.\n",
+        "*   모든 블록 안에서 들여쓰기 크기는 같은 크기로 작성.\n"
+      ],
+      "metadata": {
+        "id": "c140VX1t4zA6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "숫자(float)를 입력 받고, 입력받은 숫자가 양수/0/음수인 지를 출력하세요."
+      ],
+      "metadata": {
+        "id": "IeRCrLQp6vO0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = float(input('숫자 입력>> '))\n",
+        "if number > 0:\n",
+        "    print('양수')\n",
+        "elif number < 0:\n",
+        "    print('음수')\n",
+        "else:\n",
+        "    print('zero')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z8aoDlYA6T2j",
+        "outputId": "c64228b8-a5db-4880-97ce-63fad9f341b0"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자 입력>> -1.23\n",
+            "음수\n"
           ]
         }
       ]
