중첩 조건문

--- a/lab_python/python03_conditional.ipynb
+++ b/lab_python/python03_conditional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMj1jG8+5+MTSOVDULJPbpw",
+      "authorship_tag": "ABX9TyMQOOgWP6wzw3+rE1cmo5JV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,6 +262,152 @@
           "name": "stdout",
           "text": [
             "숫자 입력>> -1.23\n",
+            "음수\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   세 과목 시험 점수를 입력받고 저장.\n",
+        "*   세 과목의 총점 계산 출력.\n",
+        "*   세 과목의 평균 계산 출력.\n",
+        "*   세 과목의 평균이 90점 이상이면 A, 80점 이상이면 B, 70점 이상이면 C, 그렇지 않으면 F라고 출력."
+      ],
+      "metadata": {
+        "id": "aqCh-QTsACpU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score1 = int(input('점수1을 입력>> '))\n",
+        "score2 = int(input('점수2를 입력>> '))\n",
+        "score3 = int(input('점수3을 입력>> '))\n",
+        "\n",
+        "total = score1 + score2 + score3\n",
+        "print('총점:', total)\n",
+        "\n",
+        "mean = total / 3;\n",
+        "print('평균:', mean)\n",
+        "\n",
+        "if mean >= 90:\n",
+        "    print('A')\n",
+        "elif mean >= 80:\n",
+        "    print('B')\n",
+        "elif mean >= 70:\n",
+        "    print('C')\n",
+        "else:\n",
+        "    print('F')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "05O-Ju6OAoId",
+        "outputId": "066c6bdd-7545-4a2c-c703-46756eadc43c"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "점수1을 입력>> 80\n",
+            "점수2를 입력>> 90\n",
+            "점수3을 입력>> 75\n",
+            "총점: 245\n",
+            "평균: 81.66666666666667\n",
+            "B\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "변수 이름 만드는 관습:\n",
+        "\n",
+        "*   snake 표기법: 2개 이상의 단어를 사용해서 변수 이름을 만들 때, 소문자만 사용, 단어와 단어는 밑줄(_)로 연결하는 방법. (예) total_score, average_score\n",
+        "*   camel 표기법: 변수 이름은 소문자로 시작하되, 2번째 (이상) 단어의 첫글자를 대문자로 해서 연결하는 방법. (예) totalScore, averageScore\n",
+        "*   파이썬에서 변수는 snake 표기법을 주로 사용.\n"
+      ],
+      "metadata": {
+        "id": "n1-Xl9neGBIP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 중첩 조건문\n",
+        "\n",
+        "*   if, elif, else 블록 안에서 또다른 조건문이 포함된 경우.\n",
+        "*   **들여쓰기**를 특히 주의!!!\n",
+        "*   들여쓰기 방식에 따라서 전혀 다른 로직이 될 수도 있음.\n",
+        "*   중첩 조건문은 논리 연산자(and, or)를 사용하는 조건문 또는 elif 블록으로 바꿀 수도 있음.\n"
+      ],
+      "metadata": {
+        "id": "6EbEmm9lHjHW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = float(input('숫자 입력>> '))\n",
+        "if number > 0:\n",
+        "    print('양수')\n",
+        "else:\n",
+        "    if number < 0:\n",
+        "        print('음수')\n",
+        "    else:\n",
+        "        print('zero')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DUyNbOe3IgzY",
+        "outputId": "e063a8ca-9da2-4c99-acfe-f7d6fce14ee1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자 입력>> -3.12\n",
+            "음수\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = float(input('숫자 입력>> '))\n",
+        "if number >= 0:\n",
+        "    if number > 0:\n",
+        "        print('양수')\n",
+        "    else:\n",
+        "        print('zero')\n",
+        "else:\n",
+        "    print('음수')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qDXNi_7sKCNQ",
+        "outputId": "3f435471-3fe7-4ba6-a6a3-0cb1e4732831"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "숫자 입력>> -12.345\n",
             "음수\n"
           ]
         }
