난수. 조건문 연습.

--- a/lab_python/python03_conditional.ipynb
+++ b/lab_python/python03_conditional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMQOOgWP6wzw3+rE1cmo5JV",
+      "authorship_tag": "ABX9TyPH8TAjrIonoYKbUNszSYlH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -409,6 +409,160 @@
           "text": [
             "숫자 입력>> -12.345\n",
             "음수\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 난수를 만드는 방법"
+      ],
+      "metadata": {
+        "id": "8F48eyKSOSEB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random  # 난수 생성 기능을 가지고 있는 random 모듈을 사용."
+      ],
+      "metadata": {
+        "id": "GkAT4mQpOZ2I"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# random.random(): 0 이상 1 미만([0, 1) 범위)의 실수 난수를 생성하는 기능.\n",
+        "random.random()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0mI2SebIOtRy",
+        "outputId": "3c9e2d0a-d747-4c44-9f73-6aa300ae9f01"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.010738926810278548"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# random.randrange(start, end): [start, end) 범위의 정수 난수를 생성하는 기능.\n",
+        "random.randrange(1, 7)  # 1 이상 7 미만의 정수 난수."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1arOeOkLP8Li",
+        "outputId": "82a678c0-74dc-460e-b5d1-2957a5bc19b8"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# random.randrange(end): start 값을 생략한 경우, [0, end) 범위의 정수 난수를 생성하는 기능.\n",
+        "random.randrange(5)  # 0 이상 5 미만의 정수 난수."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M68nfqKTQjgy",
+        "outputId": "b851119a-017f-4e1b-c791-dd1cee5e8119"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 연습문제\n",
+        "\n",
+        "가위/바위/보 게임의 승패를 출력.\n",
+        "\n",
+        "*   가위=1, 바위=2, 보=3\n",
+        "*   컴퓨터: 1 이상 3 이하(4 미만)의 난수를 저장.\n",
+        "*   사용자: 키보드로 입력.\n",
+        "*   게임 결과를 출력. (예) 컴퓨터 승, 사용자 승, 비김.\n"
+      ],
+      "metadata": {
+        "id": "n1jMbacCRZcp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('=== 가위/바위/보 ===')\n",
+        "print('[1] 가위')\n",
+        "print('[2] 바위')\n",
+        "print('[3] 보')\n",
+        "print('====================')\n",
+        "user = int(input('선택>> '))\n",
+        "\n",
+        "computer = random.randrange(1, 4)\n",
+        "print(f'user={user} vs computer={computer}')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FWwt47orSSgC",
+        "outputId": "7024b179-2bbf-4861-ce92-16a961cee3b6"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 가위/바위/보 ===\n",
+            "[1] 가위\n",
+            "[2] 바위\n",
+            "[3] 보\n",
+            "====================\n",
+            "선택>> 1\n",
+            "user=1 vs computer=3\n"
           ]
         }
       ]
