if-elif-else. match-case

--- a/lab_python/python03_conditional.ipynb
+++ b/lab_python/python03_conditional.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPH8TAjrIonoYKbUNszSYlH",
+      "authorship_tag": "ABX9TyO225EQ9F0J9XxtJVKn2nQV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -541,16 +541,38 @@
         "user = int(input('선택>> '))\n",
         "\n",
         "computer = random.randrange(1, 4)\n",
-        "print(f'user={user} vs computer={computer}')\n"
+        "print(f'user={user} vs computer={computer}')\n",
+        "\n",
+        "if user == 1:  # 사용자-가위\n",
+        "    if computer == 1:  # 컴퓨터-가위\n",
+        "        print('비김')\n",
+        "    elif computer == 2:  # 컴퓨터-바위\n",
+        "        print('컴퓨터 승')\n",
+        "    else:  # 컴퓨터-보\n",
+        "        print('사용자 승')\n",
+        "elif user == 2:  # 사용자-바위\n",
+        "    if computer == 1:  # 컴퓨터-가위\n",
+        "        print('사용자 승')\n",
+        "    elif computer == 2:  # 컴퓨터-바위\n",
+        "        print('비김')\n",
+        "    else:  # 컴퓨터-보\n",
+        "        print('컴퓨터 승')\n",
+        "else:  # 사용자-보\n",
+        "    if computer == 1:  # 컴퓨터-가위\n",
+        "        print('컴퓨터 승')\n",
+        "    elif computer == 2:  # 컴퓨터-바위\n",
+        "        print('사용자 승')\n",
+        "    else:  # 컴퓨터-보\n",
+        "        print('비김')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FWwt47orSSgC",
-        "outputId": "7024b179-2bbf-4861-ce92-16a961cee3b6"
+        "outputId": "458653d4-e76d-42e8-bc00-9cefc9a9c266"
       },
-      "execution_count": 101,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +584,236 @@
             "[3] 보\n",
             "====================\n",
             "선택>> 1\n",
-            "user=1 vs computer=3\n"
+            "user=1 vs computer=2\n",
+            "컴퓨터 승\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('=== 가위/바위/보 ===')\n",
+        "print('[1] 가위')\n",
+        "print('[2] 바위')\n",
+        "print('[3] 보')\n",
+        "print('====================')\n",
+        "user = int(input('선택>> '))\n",
+        "\n",
+        "computer = random.randrange(1, 4)\n",
+        "print(f'user={user} vs computer={computer}')\n",
+        "\n",
+        "if user == computer:  # 비기는 경우\n",
+        "    print('비김')\n",
+        "elif user == 1:  # 사용자-가위\n",
+        "    if computer == 2:  # 컴퓨터-바위\n",
+        "        print('컴퓨터 승')\n",
+        "    else:  # 컴퓨터-보\n",
+        "        print('사용자 승')\n",
+        "elif user == 2:  # 사용자-바위\n",
+        "    if computer == 1:  # 컴퓨터-가위\n",
+        "        print('사용자 승')\n",
+        "    else:  # 컴퓨터-보\n",
+        "        print('컴퓨터 승')\n",
+        "else:  # 사용자-보\n",
+        "    if computer == 1:  # 컴퓨터-가위\n",
+        "        print('컴퓨터 승')\n",
+        "    else:  # 컴퓨터-바위\n",
+        "        print('사용자 승')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uVixEVscq2_J",
+        "outputId": "0990ae21-a4c1-4172-fce2-3808e2151265"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 가위/바위/보 ===\n",
+            "[1] 가위\n",
+            "[2] 바위\n",
+            "[3] 보\n",
+            "====================\n",
+            "선택>> 2\n",
+            "user=2 vs computer=2\n",
+            "비김\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('=== 가위/바위/보 ===')\n",
+        "print('[1] 가위')\n",
+        "print('[2] 바위')\n",
+        "print('[3] 보')\n",
+        "print('====================')\n",
+        "user = int(input('선택>> '))\n",
+        "\n",
+        "computer = random.randrange(1, 4)\n",
+        "print(f'user={user} vs computer={computer}')\n",
+        "\n",
+        "# user가 이기는 경우:\n",
+        "user_win = (user == 1 and computer == 3) or (user == 2 and computer == 1) or (user == 3 and computer == 2)\n",
+        "\n",
+        "if user == computer:\n",
+        "    print('비김')\n",
+        "elif user_win:\n",
+        "    print('사용자 승')\n",
+        "else:\n",
+        "    print('컴퓨터 승')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pP_376EHtHMx",
+        "outputId": "09ca6fbd-a02f-47af-fba8-f2a7cde60294"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 가위/바위/보 ===\n",
+            "[1] 가위\n",
+            "[2] 바위\n",
+            "[3] 보\n",
+            "====================\n",
+            "선택>> 3\n",
+            "user=3 vs computer=1\n",
+            "컴퓨터 승\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('=== 가위/바위/보 ===')\n",
+        "print('[1] 가위')\n",
+        "print('[2] 바위')\n",
+        "print('[3] 보')\n",
+        "print('====================')\n",
+        "user = int(input('선택>> '))\n",
+        "\n",
+        "computer = random.randrange(1, 4)\n",
+        "print(f'user={user} vs computer={computer}')\n",
+        "\n",
+        "game = user - computer\n",
+        "if game == 0:\n",
+        "    print('비김')\n",
+        "elif game == 1 or game == -2:\n",
+        "    print('사용자 승')\n",
+        "else:\n",
+        "    print('컴퓨터 승')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y-RgrIT9vy-k",
+        "outputId": "a5081887-5722-4669-ffa4-befc527a04ba"
+      },
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 가위/바위/보 ===\n",
+            "[1] 가위\n",
+            "[2] 바위\n",
+            "[3] 보\n",
+            "====================\n",
+            "선택>> 3\n",
+            "user=3 vs computer=2\n",
+            "사용자 승\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# match 문\n",
+        "\n",
+        "```\n",
+        "match 변수(또는 식):\n",
+        "    case 값1:\n",
+        "        변수(또는 식)이 값1과 같은 경우 실행할 코드 블록\n",
+        "    case 값2:\n",
+        "        변수(또는 식)이 값2와 같은 경우 실행할 코드 블록\n",
+        "    ...\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "2MHBHRlNxO87"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user = int(input('1, 2, 3 선택>> '))\n",
+        "match user:\n",
+        "    case 1:\n",
+        "        print('가위')\n",
+        "    case 2:\n",
+        "        print('바위')\n",
+        "    case 3:\n",
+        "        print('보')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9U3jSmjRyQpd",
+        "outputId": "da0659ff-f280-46b1-8375-6b880a118d8f"
+      },
+      "execution_count": 127,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1, 2, 3 선택>> 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 0(일요일), 1(월요일), ..., 5(금요일), 6(토요일)\n",
+        "day = int(input('0 ~ 6 선택>> '))\n",
+        "match day:\n",
+        "    case 1 | 2 | 3 | 4 | 5:\n",
+        "        print('학원에서 수업')\n",
+        "    case 0 | 6:\n",
+        "        print('집에서 복습')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7zYqIFlGzZvM",
+        "outputId": "1ad329e8-7ddd-4a1a-96f4-d84888375423"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 ~ 6 선택>> 2\n",
+            "학원에서 수업\n"
           ]
         }
       ]
