break vs continue

--- a/lab_python/python04_while.ipynb
+++ b/lab_python/python04_while.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMMSXdBIlw6kd+Cuabq9GKu",
+      "authorship_tag": "ABX9TyP+dQvlPvbKeE4opnniFOAA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,13 +175,137 @@
     {
       "cell_type": "code",
       "source": [
-        "# 9 7 5 3 1 순서로 출력"
+        "# 9 7 5 3 1 순서로 출력\n",
+        "n = 9\n",
+        "while n > 0:\n",
+        "    print(n)\n",
+        "    n -= 2"
       ],
       "metadata": {
-        "id": "758zoZnN_yeF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "758zoZnN_yeF",
+        "outputId": "45bab5ac-ada5-4772-e857-0f52610668d4"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "7\n",
+            "5\n",
+            "3\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 9\n",
+        "while n > 0:\n",
+        "    # if n % 2 == 1:  # n을 2로 나눈 나머지가 1과 같으면\n",
+        "    if n % 2:  # n을 2로 나눈 나머지가 있으면\n",
+        "        print(n)\n",
+        "    n -= 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mnZEh6dyH8lh",
+        "outputId": "7211c749-80dd-40e9-ddf2-6a0391e53ae8"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "7\n",
+            "5\n",
+            "3\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# `break`와 `continue`\n",
+        "\n",
+        "*   `break`: 반복(iteration)을 종료. break가 포함된 가장 가까운 반복문만 빠져나감.\n",
+        "*   `continue`: 다음 반복(iteration)을 계속 수행. continue 아래의 문장들은 건너뛰고, 그 다음 반복을 수행.\n"
+      ],
+      "metadata": {
+        "id": "QakSqg8gIvGZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 1\n",
+        "while n < 6:\n",
+        "    if n == 3:\n",
+        "        break\n",
+        "    print(n)\n",
+        "    n += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ak4a1UYDLcMB",
+        "outputId": "a0f59616-3922-457c-bfc9-d88acbfd9bd5"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 0\n",
+        "while n < 5:\n",
+        "    n += 1\n",
+        "    if n == 3:\n",
+        "        continue\n",
+        "    print(n)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hz2tazTFM7mS",
+        "outputId": "ffeb61af-b3b8-449c-cc5b-0262b48396bb"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
     }
   ]
 }
