while 반복문 연습문제

--- a/lab_python/python04_while.ipynb
+++ b/lab_python/python04_while.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOlYGzXyMM5nZbQkPf67FOY",
+      "authorship_tag": "ABX9TyPG6aMtx5YAy1vZS6RklpA/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
         "id": "HDPoPj0t-l9m",
         "outputId": "c533f1f1-d7f3-4465-cad6-29d18eefde9f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
         "id": "s4E3igoS_u0N",
         "outputId": "ddac9830-2e33-4e29-cd6d-9cee246e3125"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "id": "lixR3XtzAnp2",
         "outputId": "d115d06a-95b7-4905-a84e-b8670a08a533"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
         "id": "758zoZnN_yeF",
         "outputId": "45bab5ac-ada5-4772-e857-0f52610668d4"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "mnZEh6dyH8lh",
         "outputId": "7211c749-80dd-40e9-ddf2-6a0391e53ae8"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
         "id": "Ak4a1UYDLcMB",
         "outputId": "a0f59616-3922-457c-bfc9-d88acbfd9bd5"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +293,7 @@
         "id": "Hz2tazTFM7mS",
         "outputId": "ffeb61af-b3b8-449c-cc5b-0262b48396bb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,6 +326,40 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n = 1\n",
+        "while n < 10:  # while n <= 9:\n",
+        "    print(f'2 x {n} = {2 * n}')\n",
+        "    n += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "othhWt58WZ5I",
+        "outputId": "ed3820c2-106e-456e-f4ce-06b430283b4b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 문제 2. 구구단 2단부터 9단까지 출력"
@@ -333,6 +367,124 @@
       "metadata": {
         "id": "QySwIw5uSELj"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 2\n",
+        "while x < 10:\n",
+        "    print(f'=== {x}단 ===')\n",
+        "    y = 1\n",
+        "    while y < 10:\n",
+        "        print(f'{x} x {y} = {x * y}')\n",
+        "        y += 1\n",
+        "    print('--------------')\n",
+        "    x += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HcANuqTUWgHu",
+        "outputId": "60bf3014-0bd8-4baf-9325-514a3362d8c1"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 2단 ===\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "2 x 3 = 6\n",
+            "2 x 4 = 8\n",
+            "2 x 5 = 10\n",
+            "2 x 6 = 12\n",
+            "2 x 7 = 14\n",
+            "2 x 8 = 16\n",
+            "2 x 9 = 18\n",
+            "--------------\n",
+            "=== 3단 ===\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "3 x 4 = 12\n",
+            "3 x 5 = 15\n",
+            "3 x 6 = 18\n",
+            "3 x 7 = 21\n",
+            "3 x 8 = 24\n",
+            "3 x 9 = 27\n",
+            "--------------\n",
+            "=== 4단 ===\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "4 x 5 = 20\n",
+            "4 x 6 = 24\n",
+            "4 x 7 = 28\n",
+            "4 x 8 = 32\n",
+            "4 x 9 = 36\n",
+            "--------------\n",
+            "=== 5단 ===\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "--------------\n",
+            "=== 6단 ===\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "6 x 7 = 42\n",
+            "6 x 8 = 48\n",
+            "6 x 9 = 54\n",
+            "--------------\n",
+            "=== 7단 ===\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "7 x 8 = 56\n",
+            "7 x 9 = 63\n",
+            "--------------\n",
+            "=== 8단 ===\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "8 x 9 = 72\n",
+            "--------------\n",
+            "=== 9단 ===\n",
+            "9 x 1 = 9\n",
+            "9 x 2 = 18\n",
+            "9 x 3 = 27\n",
+            "9 x 4 = 36\n",
+            "9 x 5 = 45\n",
+            "9 x 6 = 54\n",
+            "9 x 7 = 63\n",
+            "9 x 8 = 72\n",
+            "9 x 9 = 81\n",
+            "--------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -352,6 +504,36 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n = 1\n",
+        "while n <= 5:\n",
+        "    print('*' * n)\n",
+        "    n += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dsRotmfQWkpm",
+        "outputId": "bc29658b-40ab-498d-c13f-fa2abdfd2831"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*\n",
+            "**\n",
+            "***\n",
+            "****\n",
+            "*****\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 문제 4. 아래와 같이 출력하는 코드를 작성하세요.\n",
@@ -369,6 +551,36 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "n = 5\n",
+        "while n > 0:\n",
+        "    print('*' * n)\n",
+        "    n -= 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WV8EsUqyWnfO",
+        "outputId": "6450f1f8-9016-438c-df64-8f152ad060fe"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "*****\n",
+            "****\n",
+            "***\n",
+            "**\n",
+            "*\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## 문제 5.\n",
@@ -377,6 +589,192 @@
       "metadata": {
         "id": "IUyzq853VRHl"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 2\n",
+        "while x < 10:\n",
+        "    print(f'=== {x}단 ===')\n",
+        "\n",
+        "    y = 1\n",
+        "    while y < 10:\n",
+        "        print(f'{x} x {y} = {x * y}')\n",
+        "        if x == y:\n",
+        "            break\n",
+        "        y += 1\n",
+        "\n",
+        "    print('----------')\n",
+        "    x += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wLwSBHNIWoke",
+        "outputId": "b9ce2e60-4be3-4882-8bfd-fbcc5e6f908b"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 2단 ===\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "----------\n",
+            "=== 3단 ===\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "----------\n",
+            "=== 4단 ===\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "----------\n",
+            "=== 5단 ===\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "----------\n",
+            "=== 6단 ===\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "----------\n",
+            "=== 7단 ===\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "----------\n",
+            "=== 8단 ===\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "----------\n",
+            "=== 9단 ===\n",
+            "9 x 1 = 9\n",
+            "9 x 2 = 18\n",
+            "9 x 3 = 27\n",
+            "9 x 4 = 36\n",
+            "9 x 5 = 45\n",
+            "9 x 6 = 54\n",
+            "9 x 7 = 63\n",
+            "9 x 8 = 72\n",
+            "9 x 9 = 81\n",
+            "----------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 2\n",
+        "while x < 10:\n",
+        "    print(f'=== {x}단 ===')\n",
+        "\n",
+        "    y = 1\n",
+        "    while y <= x:\n",
+        "        print(f'{x} x {y} = {x * y}')\n",
+        "        y += 1\n",
+        "\n",
+        "    print('----------')\n",
+        "    x += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CptCG8fXWsG2",
+        "outputId": "dcbad109-d979-40ca-a808-b371e711bb62"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== 2단 ===\n",
+            "2 x 1 = 2\n",
+            "2 x 2 = 4\n",
+            "----------\n",
+            "=== 3단 ===\n",
+            "3 x 1 = 3\n",
+            "3 x 2 = 6\n",
+            "3 x 3 = 9\n",
+            "----------\n",
+            "=== 4단 ===\n",
+            "4 x 1 = 4\n",
+            "4 x 2 = 8\n",
+            "4 x 3 = 12\n",
+            "4 x 4 = 16\n",
+            "----------\n",
+            "=== 5단 ===\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "----------\n",
+            "=== 6단 ===\n",
+            "6 x 1 = 6\n",
+            "6 x 2 = 12\n",
+            "6 x 3 = 18\n",
+            "6 x 4 = 24\n",
+            "6 x 5 = 30\n",
+            "6 x 6 = 36\n",
+            "----------\n",
+            "=== 7단 ===\n",
+            "7 x 1 = 7\n",
+            "7 x 2 = 14\n",
+            "7 x 3 = 21\n",
+            "7 x 4 = 28\n",
+            "7 x 5 = 35\n",
+            "7 x 6 = 42\n",
+            "7 x 7 = 49\n",
+            "----------\n",
+            "=== 8단 ===\n",
+            "8 x 1 = 8\n",
+            "8 x 2 = 16\n",
+            "8 x 3 = 24\n",
+            "8 x 4 = 32\n",
+            "8 x 5 = 40\n",
+            "8 x 6 = 48\n",
+            "8 x 7 = 56\n",
+            "8 x 8 = 64\n",
+            "----------\n",
+            "=== 9단 ===\n",
+            "9 x 1 = 9\n",
+            "9 x 2 = 18\n",
+            "9 x 3 = 27\n",
+            "9 x 4 = 36\n",
+            "9 x 5 = 45\n",
+            "9 x 6 = 54\n",
+            "9 x 7 = 63\n",
+            "9 x 8 = 72\n",
+            "9 x 9 = 81\n",
+            "----------\n"
+          ]
+        }
+      ]
     }
   ]
 }
